ros2_ws/log/build_2023-04-13_10-36-40/autoro_navigator/stdout_stderr.log
running egg_info
creating ../../build/autoro_navigator/autoro_navigator.egg-info
writing ../../build/autoro_navigator/autoro_navigator.egg-info/PKG-INFO
writing dependency_links to ../../build/autoro_navigator/autoro_navigator.egg-info/dependency_links.txt
writing entry points to ../../build/autoro_navigator/autoro_navigator.egg-info/entry_points.txt
writing requirements to ../../build/autoro_navigator/autoro_navigator.egg-info/requires.txt
writing top-level names to ../../build/autoro_navigator/autoro_navigator.egg-info/top_level.txt
writing manifest file '../../build/autoro_navigator/autoro_navigator.egg-info/SOURCES.txt'
reading manifest file '../../build/autoro_navigator/autoro_navigator.egg-info/SOURCES.txt'
writing manifest file '../../build/autoro_navigator/autoro_navigator.egg-info/SOURCES.txt'
running build
running build_py
creating /home/mshen/ros2_ws/build/autoro_navigator/build
creating /home/mshen/ros2_ws/build/autoro_navigator/build/lib
creating /home/mshen/ros2_ws/build/autoro_navigator/build/lib/autoro_navigator
copying autoro_navigator/navigation_node.py -> /home/mshen/ros2_ws/build/autoro_navigator/build/lib/autoro_navigator
copying autoro_navigator/__init__.py -> /home/mshen/ros2_ws/build/autoro_navigator/build/lib/autoro_navigator
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
creating /home/mshen/ros2_ws/install/autoro_navigator/lib/python3.10/site-packages/autoro_navigator
copying /home/mshen/ros2_ws/build/autoro_navigator/build/lib/autoro_navigator/navigation_node.py -> /home/mshen/ros2_ws/install/autoro_navigator/lib/python3.10/site-packages/autoro_navigator
copying /home/mshen/ros2_ws/build/autoro_navigator/build/lib/autoro_navigator/__init__.py -> /home/mshen/ros2_ws/install/autoro_navigator/lib/python3.10/site-packages/autoro_navigator
byte-compiling /home/mshen/ros2_ws/install/autoro_navigator/lib/python3.10/site-packages/autoro_navigator/navigation_node.py to navigation_node.cpython-310.pyc
  File "/home/mshen/ros2_ws/install/autoro_navigator/lib/python3.10/site-packages/autoro_navigator/navigation_node.py", line 15
    'costmap'
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

byte-compiling /home/mshen/ros2_ws/install/autoro_navigator/lib/python3.10/site-packages/autoro_navigator/__init__.py to __init__.cpython-310.pyc
running install_data
creating /home/mshen/ros2_ws/install/autoro_navigator/share/ament_index
creating /home/mshen/ros2_ws/install/autoro_navigator/share/ament_index/resource_index
creating /home/mshen/ros2_ws/install/autoro_navigator/share/ament_index/resource_index/packages
copying resource/autoro_navigator -> /home/mshen/ros2_ws/install/autoro_navigator/share/ament_index/resource_index/packages
copying package.xml -> /home/mshen/ros2_ws/install/autoro_navigator/share/autoro_navigator
running install_egg_info
Copying ../../build/autoro_navigator/autoro_navigator.egg-info to /home/mshen/ros2_ws/install/autoro_navigator/lib/python3.10/site-packages/autoro_navigator-0.0.0-py3.10.egg-info
running install_scripts
writing list of installed files to '/home/mshen/ros2_ws/build/autoro_navigator/install.log'
